--- a/AppBolivar/Src/Caja_Registro.fx.yaml
+++ b/AppBolivar/Src/Caja_Registro.fx.yaml
@@ -1481,8 +1481,12 @@ Caja_Registro As screen:
             BorderColor: =RGBA(0, 0, 0, 1)
             BorderThickness: =1
             Height: =90
-            Image: |
-                =If(IsBlank(CajaRegistroSelected.id_Image),SampleImage,AzureBlobStorage.GetFileContent(CajaRegistroSelected.id_Image))
+            Image: |-
+                =If(
+                    IsBlank(CajaRegistroSelected.id_Image),
+                    SampleImage,IfError( IsBlank(
+                    AzureBlobStorage.GetFileContent(CajaRegistroSelected.id_Image)), SampleImage, AzureBlobStorage.GetFileContent(CajaRegistroSelected.id_Image))
+                )
             RadiusBottomLeft: =8
             RadiusBottomRight: =8
             RadiusTopLeft: =8
