--- a/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
@@ -77,8 +77,7 @@
                     ) = "Masculino",
                     hombre,
                     mujer
-                ),
-                AzureBlobStorage.GetFileContent(ImagenID_HistoriaMedico.Text)
+                ), IfError( IsBlank(AzureBlobStorage.GetFileContent(ImagenID_HistoriaMedico.Text)), SampleImage, AzureBlobStorage.GetFileContent(ImagenID_HistoriaMedico.Text))
             )
         RadiusBottomLeft: =8
         RadiusBottomRight: =8
@@ -972,8 +971,8 @@
                     Image: |-
                         =If(
                             IsBlank(ThisItem.id_Image),
-                            SampleImage,
-                            AzureBlobStorage.GetFileContent(ThisItem.id_Image)
+                            SampleImage, IfError( IsBlank(
+                            AzureBlobStorage.GetFileContent(ThisItem.id_Image)), SampleImage,  AzureBlobStorage.GetFileContent(ThisItem.id_Image))
                         )
                     OnSelect: =Select(Parent)
                     Width: =60
@@ -3809,8 +3808,8 @@
         Image: |-
             =If(
                 IsBlank(EvidenciasGallery_3.Selected.id_Image),
-                SampleImage,
-                AzureBlobStorage.GetFileContent(EvidenciasGallery_3.Selected.id_Image)
+                SampleImage, IfError( IsBlank(
+                AzureBlobStorage.GetFileContent(EvidenciasGallery_3.Selected.id_Image)), SampleImage, AzureBlobStorage.GetFileContent(EvidenciasGallery_3.Selected.id_Image))
             )
         RadiusBottomLeft: =8
         RadiusBottomRight: =8
@@ -6681,14 +6680,20 @@
                                 Imagen_Id
                             )
                         ),
-                        SampleImage,
+                        SampleImage, IfError( IsBlank(
                         AzureBlobStorage.GetFileContent(
                             LookUp(
                                 'public.Medical_Center_Historial_Principal',
                                 DNI_CI = TicketSelected.DNI_Paciente,
                                 Imagen_Id
                             )
-                        )
+                        )), SampleImage,AzureBlobStorage.GetFileContent(
+                            LookUp(
+                                'public.Medical_Center_Historial_Principal',
+                                DNI_CI = TicketSelected.DNI_Paciente,
+                                Imagen_Id
+                            )
+                        ))
                     )
                 PressedBorderColor: =RGBA(255, 255, 255, 1)
                 PressedFill: =RGBA(255, 255, 255, 1)
@@ -14048,7 +14053,11 @@
                     =If(
                         IsBlank(ThisItem.id_Image),
                         SampleImage,
-                        AzureBlobStorage.GetFileContent(ThisItem.id_Image)
+                        IfError(
+                            IsBlank(AzureBlobStorage.GetFileContent(ThisItem.id_Image)),
+                            SampleImage,
+                            AzureBlobStorage.GetFileContent(ThisItem.id_Image)
+                        )
                     )
                 OnSelect: =Select(Parent)
                 Width: =60
