--- a/AppBolivar/Src/Consulta Medica Dashboard.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Dashboard.fx.yaml
@@ -942,9 +942,7 @@
             Height: =48
             HoverBorderColor: =ColorFade(img_Perfil_AM.BorderColor, 20%)
             HoverFill: =ColorFade(img_Perfil_AM.Fill, 20%)
-            Image: |-
-                =/*If(IsBlank(LookUp('public.Medical_Center_Usuario';Correo=User().Email;Imagen));SampleImage;AzureBlobStorage.GetFileContent(LookUp('public.Medical_Center_Usuario';Correo=User().Email;Imagen)))*/
-                User().Image
+            Image: =User().Image
             PressedBorderColor: =ColorFade(img_Perfil_AM.BorderColor, -20%)
             PressedFill: =ColorFade(img_Perfil_AM.Fill, -20%)
             RadiusBottomLeft: =60
