--- a/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
@@ -77,7 +77,7 @@
                     ) = "Masculino",
                     hombre,
                     mujer
-                ), IfError( IsBlank(AzureBlobStorage.GetFileContent(ImagenID_HistoriaMedico.Text)), SampleImage, AzureBlobStorage.GetFileContent(ImagenID_HistoriaMedico.Text))
+                ), IfError( AzureBlobStorage.GetFileContent(ImagenID_HistoriaMedico.Text), SampleImage)
             )
         RadiusBottomLeft: =8
         RadiusBottomRight: =8
@@ -971,8 +971,7 @@
                     Image: |-
                         =If(
                             IsBlank(ThisItem.id_Image),
-                            SampleImage, IfError( IsBlank(
-                            AzureBlobStorage.GetFileContent(ThisItem.id_Image)), SampleImage,  AzureBlobStorage.GetFileContent(ThisItem.id_Image))
+                            SampleImage, IfError( AzureBlobStorage.GetFileContent(ThisItem.id_Image), SampleImage)
                         )
                     OnSelect: =Select(Parent)
                     Width: =60
@@ -1914,7 +1913,7 @@
                     Fill: =Color.Transparent
                     Font: =Font.'Segoe UI'
                     FontWeight: =FontWeight.Bold
-                    Height: =36
+                    Height: =38
                     HoverBorderColor: =ColorFondoBoton
                     HoverColor: =ColorFondoBoton
                     HoverFill: =RGBA(255, 255, 255, 1)
@@ -1926,8 +1925,8 @@
                     RadiusTopRight: =8
                     Size: =12
                     Text: ="+  AGREGAR SERVICIO"
-                    Width: =250
-                    X: =350
+                    Width: =129
+                    X: =496
                     Y: =286
                     ZIndex: =21
 
@@ -3808,8 +3807,7 @@
         Image: |-
             =If(
                 IsBlank(EvidenciasGallery_3.Selected.id_Image),
-                SampleImage, IfError( IsBlank(
-                AzureBlobStorage.GetFileContent(EvidenciasGallery_3.Selected.id_Image)), SampleImage, AzureBlobStorage.GetFileContent(EvidenciasGallery_3.Selected.id_Image))
+                SampleImage, IfError( AzureBlobStorage.GetFileContent(EvidenciasGallery_3.Selected.id_Image),  SampleImage)
             )
         RadiusBottomLeft: =8
         RadiusBottomRight: =8
@@ -6680,20 +6678,13 @@
                                 Imagen_Id
                             )
                         ),
-                        SampleImage, IfError( IsBlank(
-                        AzureBlobStorage.GetFileContent(
+                        SampleImage, IfError(AzureBlobStorage.GetFileContent(
                             LookUp(
                                 'public.Medical_Center_Historial_Principal',
                                 DNI_CI = TicketSelected.DNI_Paciente,
                                 Imagen_Id
                             )
-                        )), SampleImage,AzureBlobStorage.GetFileContent(
-                            LookUp(
-                                'public.Medical_Center_Historial_Principal',
-                                DNI_CI = TicketSelected.DNI_Paciente,
-                                Imagen_Id
-                            )
-                        ))
+                        ),SampleImage )
                     )
                 PressedBorderColor: =RGBA(255, 255, 255, 1)
                 PressedFill: =RGBA(255, 255, 255, 1)
@@ -10975,7 +10966,7 @@
             Image32 As image:
                 Height: =54
                 Image: |-
-                    =IfError(
+                    =If(
                         IsBlank(
                             LookUp(
                                 'public.Medical_Center_Usuario',
@@ -10983,14 +10974,14 @@
                                 NombreImage
                             )
                         ),
-                        SampleImage,
+                        SampleImage,IfError(
                         AzureBlobStorage.GetFileContent(
                             LookUp(
                                 'public.Medical_Center_Usuario',
                                 Correo = User().Email,
                                 NombreImage
                             )
-                        )
+                        ), SampleImage)
                     )
                 Visible: =_varRECETAR
                 Width: =151
@@ -11826,7 +11817,7 @@
         Image32_3 As image:
             Height: =54
             Image: |-
-                =IfError(
+                =If(
                     IsBlank(
                         LookUp(
                             'public.Medical_Center_Usuario',
@@ -11834,14 +11825,14 @@
                             NombreImage
                         )
                     ),
-                    SampleImage,
+                    SampleImage,IfError(
                     AzureBlobStorage.GetFileContent(
                         LookUp(
                             'public.Medical_Center_Usuario',
                             Correo = User().Email,
                             NombreImage
                         )
-                    )
+                    ), SampleImage)
                 )
             Visible: =_varEXAMENsOLICITADO
             Width: =151
@@ -13680,7 +13671,7 @@
         Image32_4 As image:
             Height: =54
             Image: |-
-                =IfError(
+                =If(
                     IsBlank(
                         LookUp(
                             'public.Medical_Center_Usuario',
@@ -13688,14 +13679,14 @@
                             NombreImage
                         )
                     ),
-                    SampleImage,
+                    SampleImage,IfError(
                     AzureBlobStorage.GetFileContent(
                         LookUp(
                             'public.Medical_Center_Usuario',
                             Correo = User().Email,
                             NombreImage
                         )
-                    )
+                    ), SampleImage)
                 )
             Visible: =_varDESCANSOMEDICO
             Width: =151
@@ -14054,9 +14045,8 @@
                         IsBlank(ThisItem.id_Image),
                         SampleImage,
                         IfError(
-                            IsBlank(AzureBlobStorage.GetFileContent(ThisItem.id_Image)),
-                            SampleImage,
-                            AzureBlobStorage.GetFileContent(ThisItem.id_Image)
+                            AzureBlobStorage.GetFileContent(ThisItem.id_Image),
+                            SampleImage
                         )
                     )
                 OnSelect: =Select(Parent)
@@ -14119,7 +14109,7 @@
         Image32_2 As image:
             Height: =78
             Image: |-
-                =IfError(
+                =If(
                     IsBlank(
                         LookUp(
                             'public.Medical_Center_Usuario',
@@ -14127,14 +14117,14 @@
                             NombreImage
                         )
                     ),
-                    SampleImage,
+                    SampleImage,IfError(
                     AzureBlobStorage.GetFileContent(
                         LookUp(
                             'public.Medical_Center_Usuario',
                             Correo = User().Email,
                             NombreImage
                         )
-                    )
+                    ),SampleImage)
                 )
             Width: =151
             X: =800
@@ -15291,8 +15281,7 @@
         Gallery9_3 As gallery.galleryVertical:
             Height: =92
             Items: |+
-                =/*Filter('public.Medical_Center_Tratamiento';Cod_4_Diagnostico=LookUp('public.Medical_Center_Tratamiento_Maestro';var_Tratamiento_Anteriores.id=id;id))*/
-                Filter('public.Medical_Center_Tratamiento_Paciente',id_Recetas=LookUp('public.Medical_Center_Receta_Paciente',var_Tratamiento_Anteriores.id=id,id))
+                =Filter('public.Medical_Center_Tratamiento_Paciente',id_Recetas=LookUp('public.Medical_Center_Receta_Paciente',var_Tratamiento_Anteriores.id=id,id))
                 
             Layout: =Layout.Vertical
             TemplateSize: =33
