--- a/AppBolivar/Src/scHistoriaMedica.fx.yaml
+++ b/AppBolivar/Src/scHistoriaMedica.fx.yaml
@@ -2550,8 +2550,7 @@ scHistoriaMedica As screen:
                             Image: |-
                                 =If(
                                     IsBlank(HMSelected.Imagen_Id),
-                                    SampleImage,IfError(IsBlank(
-                                    AzureBlobStorage.GetFileContent(HMSelected.Imagen_Id)),SampleImage, AzureBlobStorage.GetFileContent(HMSelected.Imagen_Id))
+                                    SampleImage,IfError(AzureBlobStorage.GetFileContent(HMSelected.Imagen_Id), SampleImage)
                                 )
                             PressedBorderColor: =RGBA(255, 255, 255, 1)
                             PressedFill: =RGBA(255, 255, 255, 1)
